testsuite/tests/typecheck/should_fail/LevPolyBounded.stderr

LevPolyBounded.hs:12:15: error: [GHC-25897]
    • Couldn't match kind ‘r’ with ‘LiftedRep’
      Expected kind ‘*’, but ‘a’ has kind ‘TYPE r’
      ‘r’ is a rigid type variable bound by
        the class declaration for ‘XBounded’
        at LevPolyBounded.hs:10:18-37
    • In the type signature: LevPolyBounded.minBound :: a
      In the class declaration for ‘XBounded’

LevPolyBounded.hs:13:15: error: [GHC-25897]
    • Couldn't match kind ‘r’ with ‘LiftedRep’
      Expected kind ‘*’, but ‘a’ has kind ‘TYPE r’
      ‘r’ is a rigid type variable bound by
        the class declaration for ‘XBounded’
        at LevPolyBounded.hs:10:18-37
    • In the type signature: LevPolyBounded.maxBound :: a
      In the class declaration for ‘XBounded’
